--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<<!DOCTYPE html>
+<!DOCTYPE html>
 <html>
 <head>
 	<title>Hunt Portfolio</title>
@@ -8,7 +8,7 @@
 <br>
 <br>
 <br>
-<h1>Ye ye ye</h1>
+<div align="center"><h1>Ye ye ye</h1></div>
 
 </body>
 </html>
