Updated header with background image

--- a/index.html
+++ b/index.html
@@ -3,25 +3,20 @@
 <head>
 	<title>Hunt Portfolio</title>
 
-	<script src="/js/jquery-2.2.3.min.js"></script>
+	<script src="./js/jquery-2.2.3.min.js"></script>
+	<link rel="stylesheet" type="text/css" href="./css/default.css" />
 
-	<script>
-	$(document).ready(function() {
-		$("#btn").click(function() {
-			$("p").append("<b>Clicked</b>");
-		});
-	});
-	</script>
+	<link href='https://fonts.googleapis.com/css?family=Roboto' rel='stylesheet' type='text/css'>
 </head>
 <body>
-
-<br>
-<br>
-<br>
-<div align="center"><h1>Ye ye ye</h1></div>
-
-<button id="btn">Click me</button>
-<p></p>
+<div align="center">
+	<div id="wrapper">
+		<div id="header">
+			<h1>Main Header</h1>
+			<span class="white">This is a paragraph of informational text.</span>
+		</div>
+	</div>
+</div>
 
 </body>
 </html>
