--- a/index.html
+++ b/index.html
@@ -3,20 +3,34 @@
 <head>
 	<title>Hunt Portfolio</title>
 
-	<script src="./js/jquery-2.2.3.min.js"></script>
-	<link rel="stylesheet" type="text/css" href="./css/default.css" />
+	<meta name="viewport" content="width=device-width, initial-scale=1" />
 
+	<link rel="stylesheet" type="text/css" href="style.css" />
 	<link href='https://fonts.googleapis.com/css?family=Roboto' rel='stylesheet' type='text/css'>
+
+	<script src="jquery-2.2.3.min.js"></script>
+	<script src="aside.js"></script>
 </head>
-<body>
-<div align="center">
-	<div id="wrapper">
-		<div id="header">
-			<h1>Main Header</h1>
-			<span class="white">This is a paragraph of informational text.</span>
-		</div>
+<body id="top">
+
+<div class="pageSimple">
+	<div class="content">
+
+		<h1>Yeezy Season 4</h1>
+		<h1 class="book">by nathan hunt</h1>
+
+
+		<p><a href="/reflection">Reflection Essay</a></p>
+
+		<p>This is the second paragraph. And, since I'm not satisfied with it, 
+		there is an annotation explaining something truly important. It doesn't 
+		seem to be lining up...maybe if I add more text and simply increase the size 
+		of the paragraph all my problems will solve themselves.</p>
+
 	</div>
 </div>
+
+<footer>&copy; 2016 Nathan Hunt</footer>
 
 </body>
 </html>
