--- a/reflection/index.html
+++ b/reflection/index.html
@@ -5,11 +5,11 @@
 
 	<meta name="viewport" content="width=device-width, initial-scale=1" />
 
-	<link rel="stylesheet" type="text/css" href="style.css" />
+	<link rel="stylesheet" type="text/css" href="../style.css" />
 	<link href='https://fonts.googleapis.com/css?family=Roboto' rel='stylesheet' type='text/css'>
 
-	<script src="jquery-2.2.3.min.js"></script>
-	<script src="aside.js"></script>
+	<script src="../jquery-2.2.3.min.js"></script>
+	<script src="../aside.js"></script>
 </head>
 <body id="top">
 
