--- a/index.html
+++ b/index.html
@@ -5,27 +5,24 @@
 
 	<meta name="viewport" content="width=device-width, initial-scale=1" />
 
-	<link rel="stylesheet" type="text/css" href="../style.css" />
+	<link rel="stylesheet" type="text/css" href="style.css" />
 	<link href='https://fonts.googleapis.com/css?family=Roboto' rel='stylesheet' type='text/css'>
 
-	<script src="../jquery-2.2.3.min.js"></script>
-	<script src="../aside.js"></script>
+	<script src="jquery-2.2.3.min.js"></script>
+	<script src="aside.js"></script>
 </head>
 <body id="top">
 
 <div class="pageSimple">
 	<div class="content">
 
-		<h1>Yeezy Season 4</h1>
-		<h1 class="book">by nathan hunt</h1>
+		<h1 style="text-align: center;">Yeezy Season 4</h1>
+		<h1 class="book" style="text-align: right;">by nathan hunt</h1>
 
 
 		<p><a href="/reflection">Reflection Essay</a></p>
 
-		<p>This is the second paragraph. And, since I'm not satisfied with it, 
-		there is an annotation explaining something truly important. It doesn't 
-		seem to be lining up...maybe if I add more text and simply increase the size 
-		of the paragraph all my problems will solve themselves.</p>
+		<p>Look at this shiiiit.</p>
 
 	</div>
 </div>
