--- a/project-one/index.html
+++ b/project-one/index.html
@@ -6,8 +6,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1" />
 
 	<link rel="stylesheet" type="text/css" href="../style.css" />
-	<link href='https://fonts.googleapis.com/css?family=Roboto' rel='stylesheet' type='text/css'>
-
+	<link href="http://fonts.googleapis.com/css?family=Merriweather:400,400italic,700,700italic|Source+Code+Pro|Source+Sans+Pro:200,300,400,600,400italic,600italic|Rock+Salt" rel="stylesheet" type="text/css">
 	<script src="../jquery-2.2.3.min.js"></script>
 	<script src="../aside.js"></script>
 </head>
@@ -30,22 +29,57 @@
 		</nav>
 
 		<h1>Cold Iron and a Warm Steal</h1>
-		<h1 class="book">Project 1</h1>
+		<h1 class="book">Project 1&nbsp;&nbsp;&nbsp;&nbsp;[<a href="Hunt_P1D2.pdf" target="_blank">PDF</a>]</h1>
 
 		<div style="text-align: justify;">
-		<p>&nbsp;&nbsp;&nbsp;&nbsp;I never really liked the idea of school. In high school I had horrible habits; I procrastinated on most assignments and had a particularly hard time staying awake during the day. I’m sure the laziness and late nights didn’t help, but even if I had the work ethic I would never have enjoyed sitting around for such a large portion of the day.</p>
+		<p>&nbsp;&nbsp;&nbsp;&nbsp;<span name="annotation-1">I never</span> really liked the idea of school. In high school I had horrible habits; I procrastinated on most assignments and had a particularly hard time staying awake during the day. I’m sure the laziness and late nights didn’t help, but even if I had the work ethic I would never have enjoyed sitting around for such a large portion of the day.</p>
+
+		<aside name="annotation-1">
+			<p>I should've combined the first two paragraphs to form a larger intro.  The first one on it's own fails to have a reason to exist without the second one also existing.</p>
+		</aside>
+
 		<p>&nbsp;&nbsp;&nbsp;&nbsp;Even though I wasn’t terribly keen on college I was told by my parents, teachers, and guidance counselors that it was the best option (although to them it was the only option). I nearly screwed myself with a low SAT score and lack-luster grades. I applied to five colleges, only Northeastern accepted me (and that’s mostly because I was lucky enough to land an interview). It was like destiny in a really sour way, I was reduced down to the singular option.</p>
 		<p>&nbsp;&nbsp;&nbsp;&nbsp;Before I could register what was going on, I was swept into the engineering program at NEU. I was measuring standing oscillations in string while performing finicky derivatives and integrals. I was doing everything I could to beat my bad habits, but even when I gave it my all I still fell a bit short. Worst of all, I didn’t enjoy any of it.</p>
 		<p>&nbsp;&nbsp;&nbsp;&nbsp;I might be the worst soccer player in the entire eastern seaboard, but I still love it. I can’t run two miles without destroying my insides, but I run because I want to become better. Mechanical engineering ruined my love for hard science. I couldn’t stand going to classes, and many times I chose to ignore my alarm and sleep through them.</p>
 		<p>&nbsp;&nbsp;&nbsp;&nbsp;Most of my day comprised of shielding my eyes from the piercing glow that shined off the geniuses of the past. Newton got most of the glory, he basically founded the idea of physics; everything I did in my classes was built upon his ideas. Luckily, most of his findings were fairly basic, so even I could manage to learn them. But once I entered the realm of electromagnetism, there was no turning back.</p>
-		<p>&nbsp;&nbsp;&nbsp;&nbsp;Carl Friedrich Gauss was my mortal enemy. He somehow managed to accomplish pretty much anything with style and ease. And even when he stole credit for ideas I had to memorize it (Wilkins). For every discovery, every brilliant new idea, every indispensable inkling that changed the world of science, I had to spend time and learn it. The information was useful, the problem was that I didn’t understand it, any of it.</p>
+		<p>&nbsp;&nbsp;&nbsp;&nbsp;<span name="annotation-cf">Carl Friedrich Gauss</span> was my mortal enemy. He somehow managed to accomplish pretty much anything with style and ease. And even when he stole credit for ideas I had to memorize it (Wilkins). For every discovery, every brilliant new idea, every indispensable inkling that changed the world of science, I had to spend time and learn it. The information was useful, the problem was that I didn’t understand it, any of it.</p>
+
+		<aside name="annotation-cf">
+			<p>Style + ease = steeze.  I wish I didn't chicken out and omit this, talk about tangential learning.</p>
+		</aside>
+
 		<p>&nbsp;&nbsp;&nbsp;&nbsp;The stress of working sleepless nights and getting embarrassing grades wore me down. I became delusional; I began to believe the Gauss was still alive, actively following me around and convincing everyone around me that his new ideas were brilliant and game-changing, while I was the only one who could see them in their true form: nonsense. Gauss was wrong, I’m always right. Blah blah blah everything is dandy when you convince yourself that it is.</p>
-		<p>&nbsp;&nbsp;&nbsp;&nbsp;Eventually, my delusions turned to nightmares and my hubris suddenly came crashing down. I had to face the fact that I did not belong in the field of engineering. I always loved the idea of it, and I always wanted to build space ships, but it wasn’t for me. With the excessive weight of failure pressing down on my spirit, I had to find a new avenue for success or face the wrath of my parents’ disappointment.</p>
-		<p>&nbsp;&nbsp;&nbsp;&nbsp;After a few weeks of sulking and a bit of self-loathing, I turned to computer science. Honestly, it was the choice I should have made from the beginning; I’ve always adored computers and they’ve always kept me glued to their screens. It was like returning home, even though at the original goodbye party everyone said, “Don’t leave!” and as I was busting through the door I turned and shouted, “HA! I don’t need you!” It was dumb, I was dumb, Gauss is dumb.</p>
-		<p>&nbsp;&nbsp;&nbsp;&nbsp;The design philosophies between engineering and computing are so radically different, switching to computer science was a blessing. In engineering, you measure the world and try to figure out what the hell is going on; you have to get your hands dirty and guess most of the way through until you find an acceptable solution. In computer science, you build up from a solid foundation. Computer code always starts as empty, and I get turn into something useful. It’s the bliss of getting to decide the goal instead of trying to find it.</p>
+
+		<p>&nbsp;&nbsp;&nbsp;&nbsp;<span name="annotation-ev">Eventually</span>, my delusions turned to nightmares and my hubris suddenly came crashing down. I had to face the fact that I did not belong in the field of engineering. I always loved the idea of it, and I always wanted to build space ships, but it wasn’t for me. With the excessive weight of failure pressing down on my spirit, I had to find a new avenue for success or face the wrath of my parents’ disappointment.</p>
+
+		<aside name="annotation-ev">
+			<p>I found that describing my problems as literal to be a better way of framing the struggle I faced.  In reality, my own hubris and short-comings got in the way of my success, but to me it felt like the world was resisting.</p>
+		</aside>
+
+		<p>&nbsp;&nbsp;&nbsp;&nbsp;<span name="annotation-af">After a few</span> weeks of sulking and a bit of self-loathing, I turned to computer science. Honestly, it was the choice I should have made from the beginning; I’ve always adored computers and they’ve always kept me glued to their screens. It was like returning home, even though at the original goodbye party everyone said, “Don’t leave!” and as I was busting through the door I turned and shouted, “HA! I don’t need you!” It was dumb, I was dumb, Gauss is dumb.</p>
+
+		<aside name="annotation-af">
+			<p>I feel this paragraph could have benefitted from a smoother transition between my majors.  It also would have helped to explain my history with computers.  Here, it seems like I just like to use them, but I've been programming for over a decade at this point.</p>
+		</aside>
+
+		<p>&nbsp;&nbsp;&nbsp;&nbsp;<span name="annotation-de">The design</span> philosophies between engineering and computing are so radically different, switching to computer science was a blessing. In engineering, you measure the world and try to figure out what the hell is going on; you have to get your hands dirty and guess most of the way through until you find an acceptable solution. In computer science, you build up from a solid foundation. Computer code always starts as empty, and I get turn into something useful. It’s the bliss of getting to decide the goal instead of trying to find it.</p>
+
+		<aside name="annotation-de">
+			<p>I don't like how I pointed the descriptions toward the reader by using "you" so often.  Replacing "you measure to the world" with something like "the world is measured" puts emphasis on the concept rather than the person studying it.</p>
+		</aside>
+
 		<p>&nbsp;&nbsp;&nbsp;&nbsp;Switching to computer science was like being welcomed into a warm hug by Steve Jobs. His philosophies practically defined the way people see modern computers; he wanted a computer to be an indispensable piece of everyone’s lives, and he wanted it to be the thing people couldn’t live without (Isaacson 244-8). Back in the 70s, Jobs smoothed the rough edges of the personal computer and designed it to be a product than everyone could learn to use with ease (Isaacson 24- 6). In my programming classes, it’s amazing to see just how much time programmers spend writing code for other people’s comprehension. All the code I write has to be documented if anyone decides to use it, the user interface has to be clean and easy to use, and it has to serve a useful purpose to an audience.</p>
-		<p>&nbsp;&nbsp;&nbsp;&nbsp;Now I view scientists as hermits who gather in a dark room and huddle around an unpublished report, picking it apart and snarling at its contents. My opinion is a little skewed, but I do recognize how most things in the science world bounce around internally before they become available to the public. The publishing process (and all the peer review) for formal lab reports is exhaustive, and when a paper becomes published there is no guarantee that it will be easily visible. When was the last time you read a report on quantum mechanics or the tensile strength of cold- rolled steel? Now, when was the last time you used a device designed by a programmer? If you’re not reading this on one right now, you’ve almost definitely used your phone within the last few minutes. I view computer science as public and engineering as silent.</p>
-		<p>&nbsp;&nbsp;&nbsp;&nbsp;My habits haven’t changed much since high school. I’ve definitely gained responsibility, but at the same time I still feel like I have a long way to go before I can confidently call myself worthy of a degree. I grew tired of the methodical plodding through engineering, I want to design and create. With programming and CS, I have a wider range of possibilities. With my switch to computer science, I feel confident that my efforts are going towards something I can be proud of and even enjoy. But who knows, I’ll probably switch majors again.</p>
+		<p>&nbsp;&nbsp;&nbsp;&nbsp;<span name="annotation-end">Now</span> I view scientists as hermits who gather in a dark room and huddle around an unpublished report, picking it apart and snarling at its contents. My opinion is a little skewed, but I do recognize how most things in the science world bounce around internally before they become available to the public. The publishing process (and all the peer review) for formal lab reports is exhaustive, and when a paper becomes published there is no guarantee that it will be easily visible. When was the last time you read a report on quantum mechanics or the tensile strength of cold-rolled steel? Now, when was the last time you used a device designed by a programmer? If you’re not reading this on one right now, you’ve almost definitely used your phone within the last few minutes. I view computer science as public and engineering as silent.</p>
+
+		<aside name="annotation-end">
+			<p>I like how this paragraph turned out.  It makes my point clearly and fairly succinctly.  This is also an instance where pointing towards the audience benefits the essay, because the pathos is more likely to connect here.  I mean, who isn't addicted to technology?</p>
+		</aside>
+
+		<p>&nbsp;&nbsp;&nbsp;&nbsp;<span name="annotation-concl">My habits</span> haven’t changed much since high school. I’ve definitely gained responsibility, but at the same time I still feel like I have a long way to go before I can confidently call myself worthy of a degree. I grew tired of the methodical plodding through engineering, I want to design and create. With programming and CS, I have a wider range of possibilities. With my switch to computer science, I feel confident that my efforts are going towards something I can be proud of and even enjoy. But who knows, I’ll probably switch majors again.</p>
+
+		<aside name="annotation-concl">
+			<p>I did actually switch majors again.</p>
+		</aside>
 		</div>
 
 		<nav>
