--- a/project-three/index.html
+++ b/project-three/index.html
@@ -6,8 +6,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1" />
 
 	<link rel="stylesheet" type="text/css" href="../style.css" />
-	<link href='https://fonts.googleapis.com/css?family=Roboto' rel='stylesheet' type='text/css'>
-
+	<link href="http://fonts.googleapis.com/css?family=Merriweather:400,400italic,700,700italic|Source+Code+Pro|Source+Sans+Pro:200,300,400,600,400italic,600italic|Rock+Salt" rel="stylesheet" type="text/css">
 	<script src="../jquery-2.2.3.min.js"></script>
 	<script src="../aside.js"></script>
 </head>
@@ -30,14 +29,21 @@
 		</nav>
 
 		<h1>Game Feel</h1>
-		<h1 class="book">Project 3</h1>
+		<h1 class="book">Project 3&nbsp;&nbsp;&nbsp;&nbsp;[<a href="https://en.wikipedia.org/w/index.php?title=Game_feel&oldid=715603105" target="_blank">Wikipedia</a>]</h1>
 
 		<div style="text-align: justify;">
-		
-		<a href="https://en.wikipedia.org/w/index.php?title=Game_feel&oldid=715603105" target="_blank">Game Feel WikiArticle Perma-link</a>
 
-		<p><b>Game feel</b> (sometimes referred to as "game juice") is the intangible, tactile sensation experienced when interacting with video games. The term was popularized by the book Game Feel: A Game Designer's Guide to Virtual Sensation<a href="#ref1">[1]</a> written by Steve Swink. The term has no formal definition, but there are many defined ways to improve game feel. The different areas of a game that can be manipulated to improve game feel are: input, response, context, aesthetic, metaphor, and rules.</p>
-		<p>Game feel is usually attributed to spatial games whose mechanics involve controlling the movement of objects or characters. Since the majority of games are spatial, studies involving game feel mainly focus on the movement and physical interactions between objects in games. The goal of good game feel is to immerse the player in an engaging and rewarding experience. A way to test game feel is to see if interacting with a game's most basic mechanics feels satisfying. At minimum, the game should feel engaging to play even after the plot, points, level design, music, and graphics are removed; if it is not, then the game may suffer from poor game feel.<a href="#ref2">[2]</a></p>
+		<p><b><span name="annotation-title">Game feel</span></b> (sometimes referred to as "game juice") is the intangible, tactile sensation experienced when interacting with video games. The term was popularized by the book Game Feel: A Game Designer's Guide to Virtual Sensation<a href="#ref1">[1]</a> written by Steve Swink. The term has no formal definition, but there are many defined ways to improve game feel. The different areas of a game that can be manipulated to improve game feel are: input, response, context, aesthetic, metaphor, and rules.</p>
+
+		<aside name="annotation-title">
+			<p>This article was particularly difficult to write because the idea of game feel is not only non-tangible, but was never fully-defined before hand.  The term "game feel" is almost a colloquialism, but it is hard to find anyone who calls it by a different name (although, I do like the name <a href="https://www.youtube.com/watch?v=MrFK4NlGCo0">Kinaesthetics</a>).</p>
+		</aside>
+
+		<p><span name="annotation-in">Game feel</span> is usually attributed to spatial games whose mechanics involve controlling the movement of objects or characters. Since the majority of games are spatial, studies involving game feel mainly focus on the movement and physical interactions between objects in games. The goal of good game feel is to immerse the player in an engaging and rewarding experience. A way to test game feel is to see if interacting with a game's most basic mechanics feels satisfying. At minimum, the game should feel engaging to play even after the plot, points, level design, music, and graphics are removed; if it is not, then the game may suffer from poor game feel.<a href="#ref2">[2]</a></p>
+
+		<aside name="annotation-in">
+			<p>Another issue I ran into was balancing formality and factual-ness.  Wikipedia articles are meant to be easily-read so they don't prevent the average person from understanding.  However, in trying to make it easy to understand, I ended up delivering the information as if I was explaining it to someone instead of delivering plain facts.  It reads a bit like original research when it should read more like an encyclopedia article (not-surprisingly).</p>
+		</aside>
 
 		<p><b>Input</b></p>
 		<p>Input is the means by which a player can control the game. The physical input device used by the player has an effect on game feel; for instance, using a joystick to control movement feels natural because the joystick itself offers physical feedback. In other cases, like with touchscreens, the input device can offer little feedback and be cumbersome for the player to use.</p>
@@ -52,7 +58,11 @@
 		<p>Input and response require an environment that gives meaning to the player's actions. If the player has the ability to move the character in interesting ways, the environments in the game should reflect that and give the player interesting situations to play in. For instance, a racing game that focuses on careful steering and managing speed around corners would not be engaging if the race track was a wide, straight line; a track with slopes, bends, straights, and hairpin turns creates interesting scenarios for the player to interact with.<a href="#ref3">[3]</a></p>
 
 		<p><b>Aesthetic</b></p>
-		<p>Aesthetics (also referred to as "polish") is the extra details that influence the player's senses. Since games are primarily focused on sight and sound (graphics and music/sfx), aesthetics amplify both the visuals and the audio of the game to make the overall experience more engaging to the player.</p>
+		<p><span name="annotation-aes">Aesthetics</span> (also referred to as "polish") is the extra details that influence the player's senses. Since games are primarily focused on sight and sound (graphics and music/sfx), aesthetics amplify both the visuals and the audio of the game to make the overall experience more engaging to the player.</p>
+
+		<aside name="annotation-aes">
+			<p>Trying to describe aesthetics with text is especially difiicult.  This is where video essays and actual gameplay examples triumph; text descriptions of sensation is, almost by definition, lacking.</p>
+		</aside>
 
 		<p><b>Visual</b></p>
 		<p>Visual aesthetics add details to the game world that make it feel more vibrant and connected. Visual details can subconsciously inform the player of the subtle interactions between the objects in the game world. Simple examples include adding particle effects, like dirt being kicked up by the game character's feet or water splashing from a pool, can enhance the inherent connection between physical objects in the game world.</p>
