--- a/reflection/index.html
+++ b/reflection/index.html
@@ -33,39 +33,16 @@
 		<h1 class="book">by nathan hunt</h1>
 
 		<div style="text-align: justify;">
-		<p>&nbsp;&nbsp;&nbsp;&nbsp;I once dreamt about being an astronaut.  I dreamt 
-		of gripping my seat as my ship rumbled through the atmosphere during take-off.  
-		I dreamt of slowly drifting through the endless, inky void.  I dreamt of being a 
-		world away, experiencing new sights, scents, textures, echoes, rattles.  I dreamt 
-		of something better, a place to be.</p>
-		<p>&nbsp;&nbsp;&nbsp;&nbsp;I imagined landing on a distant planet, somewhere outside 
-		of our solar system.  The smooth, cyan ground was covered in a thick red fog.  As soon 
-		as I stepped out of my ship, I was knocked back by blisteringly cold wind whipping at 
-		my helmet.  My feet struggled to find grip in the shifting sands.  The terrain seemed 
-		endless, there were no visible landmarks in any direction.  After waiting out the winds, 
-		I ventured out to search for something.  The end goal wasn't very clear, but I trudged 
-		along anyway to try and find some sort of bearing.</p>
-		<br><br><br><hr>
+		<p>&nbsp;&nbsp;&nbsp;&nbsp;Really need to work on this.</p><hr>
 		<p>Step by Step Guide to Better Technical Writing:</p>
 		<ol>
-		<li>Ye</li>
+		<li>Understand your audience.  Tone and formality should be a reflection of the intended audience.</li>
+		<li>Information should be delivered factually, never as conjecture or inference.</li>
+		<li>Sources are key, more importantly dversify sources and search for trends.</li>
+		<li>Always make sure to engage the reader.</li>
+		<li>Be consice, eliminate any unnecessary words or phrases.</li>
+		<li>Proofread, grammar and spelling mistakes are distracting.</li>
 		</ol>
-		<p>&nbsp;&nbsp;&nbsp;&nbsp;Self-expression is not something that comes easily to 
-		me, and I find writing about my previous works to be doubly hard.  I've been 
-		reviewing my three projects and after careful deliberation, I've decided to 
-		call them "okay."  I can't call my work stellar and I certainly don't consider 
-		it anything ground-breaking or even terribly special.  However, I do see my 
-		skill as a technical writer improving, and more importantly seeing my own work 
-		no longer makes me embarrassed for the potential reader.</p>
-		<p>&nbsp;&nbsp;&nbsp;&nbsp;A lot of the issues in my works are systemic, and 
-		come from a fundamental misunderstanding of the prompt.  With 
-		<a href="#">Project 1</a> I spent a sizable amount of time debating how to 
-		even begin tackling the prompt.  The brainstorming and writing processes entwined 
-		themselves into a nasty vortex in which nothing escaped; in the end I had nothing. 
-		My writing background is almost entirely in <a href="http://www.writing.ucsb.edu/faculty/dean/Upload-STEP08/ThePoisonedFish.pdf">Engfish</a> and is a product of 
-		the Massachusetts Public School System; my teachers would be ashamed to hear me say it, but it's an undeniable truth.  Adapting to this class required re-learning how 
-		to write clearly and succinctly, the fluff would have to go.</p>
-		<p>&nbsp;&nbsp;&nbsp;&nbsp;</p>
 		</div>
 
 
