--- a/index.html
+++ b/index.html
@@ -16,14 +16,10 @@
 <div class="pageSimple">
 	<div class="content">
 
-		<h1 style="text-align: center;">Yeezy Season 4</h1>
-		<h1 class="book" style="text-align: right;">by nathan hunt</h1>
+		<h1 style="text-align: center;">Whatever</h1>
+		<h1 class="book" style="text-align: right;">nathan hunt</h1>
 
-
-		<p><a href="/reflection">Reflection Essay</a></p>
-
-		<p>Look at this shiiiit.</p>
-
+		<p>I'm not terribly proud of anything in this portfolio, but if you feel <a href="contents.html">compelled to enter...</a></p>
 	</div>
 </div>
 
