--- a/contents.html
+++ b/contents.html
@@ -17,11 +17,11 @@
 		<nav class="top">
 		<table>
 		<tr>
-			<td><a href="#">Landing<span class="full-nav">&nbsp;Page</span></a>
+			<td><a href="hunt-portfolio.com">Landing<span class="full-nav">&nbsp;Page</span></a>
 			<td class="gap">&nbsp;
-			<td>&equiv;&nbsp;<a href="#">Cont<span class="full-nav">ents</span></a>
+			<td>&equiv;&nbsp;<a href="hunt-portfolio.com/contents.html">Cont<span class="full-nav">ents</span></a>
 			<td class="gap">&nbsp;
-			<td><a href="#">Reflec<span class="full-nav">tion</span></a>
+			<td><a href="hunt-portfolio.com/reflection">Reflec<span class="full-nav">tion</span></a>
 			<td class="gap">&nbsp;
 			<td><a href="hunt-portfolio.com#supporting">Supporting<span class="full-nav">&nbsp;Works</span></a>
 		</tr>
@@ -32,6 +32,9 @@
 
 		<div style="text-align: justify;">
 
+		<h2>Reflection:</h2>
+		<ul><li><a href="/reflection">Reflection Essay</a></li></ul>
+
 		<h2 id="finished">Finished Works:</h2>
 		<ul>
 			<li><a href="/project-one">Project 1 : Intellectual Autobiography</a></li>
@@ -41,7 +44,8 @@
 
 		<h2 id="supporting">Supporting Works:</h2>
 		<ul>
-			<li><a href="">Project 1</a></li>
+			<li>Project 1 Review Memos:&nbsp; <a href="/project-one/Hunt_Mews-Schmuck_P1.pdf" target="_blank">[1]</a>&nbsp;&nbsp;&nbsp;<a href="/project-one/Hunt_Taing_P1.pdf" target="_blank">[2]</a></li>
+			<li>Project 2 Review Memos:&nbsp; <a href="/project-two/Hunt_Wagner_P2.pdf" target="_blank">[1]</a>&nbsp;&nbsp;&nbsp;<a href="/project-two/Wojcik_Hunt_P2.pdf" target="_blank">[2]</a></li>
 		</ul>
 
 		</div>
