--- a/project-two/index.html
+++ b/project-two/index.html
@@ -18,13 +18,13 @@
 		<nav class="top">
 		<table>
 		<tr>
-			<td><a href="hunt-portfolio.com">Landing<span class="full-nav">&nbsp;Page</span></a>
+			<td><a href="/">Landing<span class="full-nav">&nbsp;Page</span></a>
 			<td class="gap">&nbsp;
-			<td>&equiv;&nbsp;<a href="hunt-portfolio.com/contents.html">Cont<span class="full-nav">ents</span></a>
+			<td>&equiv;&nbsp;<a href="/contents.html">Cont<span class="full-nav">ents</span></a>
 			<td class="gap">&nbsp;
-			<td><a href="hunt-portfolio.com/reflection">Reflec<span class="full-nav">tion</span></a>
+			<td><a href="/reflection">Reflec<span class="full-nav">tion</span></a>
 			<td class="gap">&nbsp;
-			<td><a href="hunt-portfolio.com#supporting">Supporting<span class="full-nav">&nbsp;Works</span></a>
+			<td><a href="/#supporting">Supporting<span class="full-nav">&nbsp;Works</span></a>
 		</tr>
 		</table>
 		</nav>
