--- a/reflection/index.html
+++ b/reflection/index.html
@@ -6,8 +6,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1" />
 
 	<link rel="stylesheet" type="text/css" href="../style.css" />
-	<link href='https://fonts.googleapis.com/css?family=Roboto' rel='stylesheet' type='text/css'>
-
+	<link href="http://fonts.googleapis.com/css?family=Merriweather:400,400italic,700,700italic|Source+Code+Pro|Source+Sans+Pro:200,300,400,600,400italic,600italic|Rock+Salt" rel="stylesheet" type="text/css">
 	<script src="../jquery-2.2.3.min.js"></script>
 	<script src="../aside.js"></script>
 </head>
@@ -24,7 +23,7 @@
 			<td class="gap">&nbsp;
 			<td><a href="/reflection">Reflec<span class="full-nav">tion</span></a>
 			<td class="gap">&nbsp;
-			<td><a href="/#supporting">Supporting<span class="full-nav">&nbsp;Works</span></a>
+			<td><a href="/contents.html#supporting">Supporting<span class="full-nav">&nbsp;Works</span></a>
 		</tr>
 		</table>
 		</nav>
