--- a/project-one/index.html
+++ b/project-one/index.html
@@ -23,7 +23,7 @@
 			<td class="gap">&nbsp;
 			<td><a href="/reflection">Reflec<span class="full-nav">tion</span></a>
 			<td class="gap">&nbsp;
-			<td><a href="/#supporting">Supporting<span class="full-nav">&nbsp;Works</span></a>
+			<td><a href="/contents.html#supporting">Supporting<span class="full-nav">&nbsp;Works</span></a>
 		</tr>
 		</table>
 		</nav>
