--- a/reflection/index.html
+++ b/reflection/index.html
@@ -32,7 +32,6 @@
 		<h1 class="book">by nathan hunt</h1>
 
 		<div style="text-align: justify;">
-		<p>&nbsp;&nbsp;&nbsp;&nbsp;Really need to work on this.</p><hr>
 		<p>Step by Step Guide to Better Technical Writing:</p>
 		<ol>
 		<li>Understand your audience.  Tone and formality should be a reflection of the intended audience.</li>
@@ -41,6 +40,7 @@
 		<li>Always make sure to engage the reader.</li>
 		<li>Be consice, eliminate any unnecessary words or phrases.</li>
 		<li>Proofread, grammar and spelling mistakes are distracting.</li>
+		<li>Try not to get too depressed while reviewing old work.</li>
 		</ol>
 		</div>
 
