--- a/reflection/2.html
+++ b/reflection/2.html
@@ -29,36 +29,58 @@
 		</table>
 		</nav>
 
-		<h1>Apocalyptic, in a Sense.</h1>
-		<h1 class="book">by nathan hunt</h1>
+		<h1>Analytics</h1>
+		<h1 class="book">Criteria 2</h1>
 
 		<div style="text-align: justify;">
 
-		<canvas id="fluffChart" width="400" height="400"></canvas>
+		<p></p>
+
+		<canvas id="adverbChart" width="400" height="400"></canvas>
+		<canvas id="informalChart" width="400" height="400"></canvas>
+		<br><p style="float: left;"><a href="1.html"><< Back</a></p>
+		<p style="float: right;"><a href="3.html">Prev >></a></p><br>
 
 		<script type="text/javascript">
-		var data = {
+		var adverbData = {
 			labels: ["Student 1", "Student 2", "Student 3", "Student 4", "Student 5", "Student 6", "Student 7", "Student 8", "Student 9", "Student 10", "Student 11", "Student 12", "Student 13", "Student 14", "Student 15", "Student 16"],
 			datasets: [{
 				label: 'Project 1',
 				backgroundColor: "rgba(152,162,174, 1)",
-				data: [0.17, 0.28, 0.15, 0.15, 0.25, 0.23, 0.17, 0.2, 0.15, 0.31, 0.35, 0.19, 0.3, 0.24, 0.26, 0.2]
+				data: [22, 14, 26, 8, 15, 5, 23, 15, 11, 6, 8, 8, 10, 28, 10, 11]
 			}, {
 				label: 'Project 2',
 				backgroundColor: "rgba(40,133,141, 1)",
-				data: [0.37, 0.38, 0.42, 0.18, 0.34, 0.34, 0.36, 0.38, 0, 0.35, 0.35, 0.47, 0.22, 0.36, 0.26, 0.29]
+				data: [19, 12, 35, 21, 27, 5, 19, 17, 0, 8, 20, 20, 11, 31, 16, 13]
 			}, {
 				label: 'Reflection',
 				backgroundColor: "rgba(36,64,86, 1)",
-				data: [0.33, 0.39, 0.34, 0.18, 0.39, 0.32, 0.26, 0.2, 0, 0.32, 0.33, 0, 0.32, 0.27, 0.33, 0.41]
+				data: [11, 20, 32, 9, 13, 8, 2, 21, 0, 19, 10, 0, 8, 23, 17, 7]
+			}]
+		};
+
+		var informalData = {
+			labels: ["Student 1", "Student 2", "Student 3", "Student 4", "Student 5", "Student 6", "Student 7", "Student 8", "Student 9", "Student 10", "Student 11", "Student 12", "Student 13", "Student 14", "Student 15", "Student 16"],
+			datasets: [{
+				label: 'Project 1',
+				backgroundColor: "rgba(152,162,174, 1)",
+				data: [11, 6, 7, 19, 4, 2, 6, 3, 10, 14, 5, 7, 8, 19, 7, 5]
+			}, {
+				label: 'Project 2',
+				backgroundColor: "rgba(40,133,141, 1)",
+				data: [27, 18, 28, 38, 43, 28, 13, 23, 0, 25, 10, 24, 28, 29, 21, 21]
+			}, {
+				label: 'Reflection',
+				backgroundColor: "rgba(36,64,86, 1)",
+				data: [11,11,17,15,25,17,8,13,9,0,20,6,0,12,23,10,8]
 			}]
 		};
 
 		window.onload = function() {
-			var ctx = $("#fluffChart").get(0).getContext("2d");
-			window.myBar = new Chart(ctx, {
+			var adverbCtx = $("#adverbChart").get(0).getContext("2d");
+			window.adverbBar = new Chart(adverbCtx, {
             	type: 'bar',
-            	data: data,
+            	data: adverbData,
             	options: {
                 	elements: {
                     	rectangle: {
@@ -73,7 +95,30 @@
                 	},
                 	title: {
                     	display: true,
-                    	text: 'Fluff, Higher is more fluff'
+                    	text: 'Adverbs'
+                	}
+            	}
+        	});
+
+        	var informalCtx = $("#informalChart").get(0).getContext("2d");
+        	window.informalBar= new Chart(informalCtx, {
+            	type: 'bar',
+            	data: informalData,
+            	options: {
+                	elements: {
+                    	rectangle: {
+                        	borderWidth: 1,
+                        	borderColor: 'rgb(15, 15, 20)',
+                        	borderSkipped: 'bottom'
+                    	}
+                	},
+                	responsive: true,
+                	legend: {
+                    	position: 'top',
+                	},
+                	title: {
+                    	display: true,
+                    	text: 'Instances of Informality'
                 	}
             	}
         	});
