--- a/reflection/4.html
+++ b/reflection/4.html
@@ -29,36 +29,40 @@
 		</table>
 		</nav>
 
-		<h1>Apocalyptic, in a Sense.</h1>
-		<h1 class="book">by nathan hunt</h1>
+		<h1>Analytics</h1>
+		<h1 class="book">Criteria 4</h1>
 
 		<div style="text-align: justify;">
 
-		<canvas id="fluffChart" width="400" height="400"></canvas>
+		<p></p>
+
+		<canvas id="revisionsChart" width="400" height="400"></canvas>
+		<br><p style="float: left;"><a href="1.html"><< Back</a></p>
+		<p style="float: right;"><a href="3.html">Prev >></a></p><br>
 
 		<script type="text/javascript">
-		var data = {
+		var revisionsData = {
 			labels: ["Student 1", "Student 2", "Student 3", "Student 4", "Student 5", "Student 6", "Student 7", "Student 8", "Student 9", "Student 10", "Student 11", "Student 12", "Student 13", "Student 14", "Student 15", "Student 16"],
 			datasets: [{
 				label: 'Project 1',
 				backgroundColor: "rgba(152,162,174, 1)",
-				data: [0.17, 0.28, 0.15, 0.15, 0.25, 0.23, 0.17, 0.2, 0.15, 0.31, 0.35, 0.19, 0.3, 0.24, 0.26, 0.2]
+				data: [344,-18,312,376,227,103,643,212,166,266,59,274,39,958,189,396]
 			}, {
 				label: 'Project 2',
 				backgroundColor: "rgba(40,133,141, 1)",
-				data: [0.37, 0.38, 0.42, 0.18, 0.34, 0.34, 0.36, 0.38, 0, 0.35, 0.35, 0.47, 0.22, 0.36, 0.26, 0.29]
+				data: [10,197,249,321,338,463,429,413,0,396,72,624,321,2,966,196]
 			}, {
 				label: 'Reflection',
 				backgroundColor: "rgba(36,64,86, 1)",
-				data: [0.33, 0.39, 0.34, 0.18, 0.39, 0.32, 0.26, 0.2, 0, 0.32, 0.33, 0, 0.32, 0.27, 0.33, 0.41]
+				data: [0, 0, 0, 0, 0, 0, 0, 0, 0,0, 0, 0, 0, 0, 0, 0]
 			}]
 		};
 
 		window.onload = function() {
-			var ctx = $("#fluffChart").get(0).getContext("2d");
-			window.myBar = new Chart(ctx, {
+			var revisionsCtx = $("#revisionsChart").get(0).getContext("2d");
+			window.revisionsBar = new Chart(revisionsCtx, {
             	type: 'bar',
-            	data: data,
+            	data: revisionsData,
             	options: {
                 	elements: {
                     	rectangle: {
@@ -73,7 +77,7 @@
                 	},
                 	title: {
                     	display: true,
-                    	text: 'Fluff, Higher is more fluff'
+                    	text: 'Revisions (# of words)'
                 	}
             	}
         	});
