Removed chart from reflection index

--- a/reflection/index.html
+++ b/reflection/index.html
@@ -34,51 +34,7 @@
 
 		<div style="text-align: justify;">
 
-		<canvas id="fluffChart" width="400" height="400"></canvas>
-
-		<script type="text/javascript">
-		var data = {
-			labels: ["Student 1", "Student 2", "Student 3", "Student 4", "Student 5", "Student 6", "Student 7", "Student 8", "Student 9", "Student 10", "Student 11", "Student 12", "Student 13", "Student 14", "Student 15", "Student 16"],
-			datasets: [{
-				label: 'Project 1',
-				backgroundColor: "rgba(152,162,174, 1)",
-				data: [0.17, 0.28, 0.15, 0.15, 0.25, 0.23, 0.17, 0.2, 0.15, 0.31, 0.35, 0.19, 0.3, 0.24, 0.26, 0.2]
-			}, {
-				label: 'Project 2',
-				backgroundColor: "rgba(40,133,141, 1)",
-				data: [0.37, 0.38, 0.42, 0.18, 0.34, 0.34, 0.36, 0.38, 0, 0.35, 0.35, 0.47, 0.22, 0.36, 0.26, 0.29]
-			}, {
-				label: 'Reflection',
-				backgroundColor: "rgba(36,64,86, 1)",
-				data: [0.33, 0.39, 0.34, 0.18, 0.39, 0.32, 0.26, 0.2, 0, 0.32, 0.33, 0, 0.32, 0.27, 0.33, 0.41]
-			}]
-		};
-
-		window.onload = function() {
-			var ctx = $("#fluffChart").get(0).getContext("2d");
-			window.myBar = new Chart(ctx, {
-            	type: 'bar',
-            	data: data,
-            	options: {
-                	elements: {
-                    	rectangle: {
-                        	borderWidth: 1,
-                        	borderColor: 'rgb(15, 15, 20)',
-                        	borderSkipped: 'bottom'
-                    	}
-                	},
-                	responsive: true,
-                	legend: {
-                    	position: 'top',
-                	},
-                	title: {
-                    	display: true,
-                    	text: 'Fluff, Higher is more fluff'
-                	}
-            	}
-        	});
-		};	
-		</script>
+		<p>Standby...</p>
 		
 		</div>
 
